--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+
+main {
+  height: 100vh;
+
+  margin: 5px 10px 0 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px; 
+  flex-wrap: wrap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+div.box {
+  width: 25vw;
+  height: 80vh;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 5px; 
+
+  background-color: rgba(51, 135, 172, 0.7);
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 20px #05386b;
 }
 
-.App-link {
-  color: #61dafb;
+div.box h1 {
+  font-size: 20px;
+}
+div.box p {
+  font-size: 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+footer {
+  position: absolute;
+  bottom: -40px;
 }
