--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ div.box {
   width: 25vw;
   height: 80vh;
 
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,10 +30,14 @@ div.box {
 }
 
 div.box h1 {
+  position: absolute;
+  top: 20px;
   font-size: 20px;
 }
 div.box p {
   font-size: 12px;
+  position: absolute;
+  top: 60px;
 }
 
 
